# operations-software-varnish-vhtcpd

./: .gitignore  .gitreview  Makefile.am  NEWS  README  autogen.sh  configure.ac
debian/: README.BUILD.WMF  changelog  control  copyright  gbp.conf  init.d.ex  postinst.ex  postrm.ex  rules  vhtcpd.default  vhtcpd.default.ex  vhtcpd.init.d  vhtcpd.install  vhtcpd.lintian-overrides  vhtcpd.postinst  vhtcpd.postrm
qa/: coverage.sh
src/: Makefile.am  main.c  purger.c  purger.h  receiver.c  receiver.h  stats.c  stats.h  strq.c  strq.h  test_strq.c
src/libdmn/: README  dmn_daemon.c  dmn_log.c  dmn_secure.c  libdmn.m4
t/: pktgen.pl
